primera neteja per compilar amb java 11